# nyse-sol-program

./: .gitignore  Anchor.toml  README.md  deployment-info.json  package-lock.json  package.json  program-addresses.json  stonks-deployment-latest.json  stonks-deployment-testnet.json  stonks-metadata.json
programs/nyse-token-hook/: Cargo.toml
programs/nyse-token-hook/src/: lib.rs
scripts/: deploy-stonks-token.ts  test-lp.ts  test-trading.ts
tests/: nyse-token-hook.ts
